upd - fixed video spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,7 @@ img {
     justify-content: space-evenly;
     margin-bottom: 50px;
     align-items: center;
-    /* border: 10px solid salmon; */
+    border: 10px solid salmon;
 }
 
 .video-content-heading {
@@ -184,7 +184,8 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* border: 10px solid salmon; */
+    border: 10px solid salmon;
+    margin-left: 15px;
 }
 
 .video-1 {
@@ -195,7 +196,8 @@ img {
     padding: 10px 0 20px 0;
     display: flex;
     align-items: center;
-    /* border: 10px solid salmon; */
+    border: 10px solid salmon;
+    margin-right: 15px;
 }
 
 .video-2 {
@@ -547,5 +549,3 @@ img {
         height: 100%;
     }
 }
-
-/* @media (max-width: 500px) */
